--- a/cluster/01_infrastructure/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/01_infrastructure/rook-ceph/helm-ceph-cluster.yaml
@@ -187,14 +187,16 @@ spec:
           - secretName: "${SECRET_DOMAIN/./-}-tls"
 
     cephBlockPools:
-      # 普通应用，压缩
+      # 普通应用，开启压缩，使用nvme ssd作为主副本提高读取性能，使用hdd做热备副本
       - name: block-application
         spec:
           failureDomain: osd
           replicated:
             size: 3  # 副本数
             requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
-          deviceClass: ssd  # 设置后端osd类型
+            hybridStorage: # 设置为混合存储池，主副本为SSD，其余副本为HDD
+              primaryDeviceClass: nvme
+              secondaryDeviceClass: hdd
           parameters:
             compression_mode: aggressive # 设置除了指定不可压缩的数据以外都进行压缩
         storageClass:
@@ -215,14 +217,15 @@ spec:
             csi.storage.k8s.io/node-stage-secret-name: rook-csi-rbd-node
             csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
             csi.storage.k8s.io/fstype: ext4  # 可以设置为xfs，但官方不推荐
-      # 极致性能，不压缩
+
+      # 需要极致性能的应用，不压缩，使用nvme ssd
       - name: block-application-performance
         spec:
           failureDomain: osd
           replicated:
             size: 3  # 副本数
             requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
-          deviceClass: ssd  # 设置后端osd类型
+          deviceClass: nvme  # 设置后端osd类型
         storageClass:
           enabled: true
           name: ceph-block-application-performance  # 存储类名称
