--- a/cluster/00_base/kustomization.yaml
+++ b/cluster/00_base/kustomization.yaml
@@ -3,6 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - flux-system
+  - cluster-secrets.sops.yaml
+  - cluster-settings.yaml
   - namespaces_infrastructure
   - namespaces_management-tools
   - namespaces_other
