--- a/cluster/01_infrastructure/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/01_infrastructure/rook-ceph/helm-ceph-cluster.yaml
@@ -108,6 +108,17 @@ spec:
         # 关闭自动在所有节点和所有磁盘上寻找空白盘并添加为OSD的操作，改为手动配置方式添加
         useAllNodes: false
         useAllDevices: false
+        nodes:
+          - name: "home-server-sonic"
+            devices:
+              - name: "/dev/disk/by-id/nvme-INTEL_SSDPE2KX040T8_BTLJ848209YE4P0DGN"  # Intel P4510 4T U.2
+                config:
+                  deviceClass: "nvme"
+                  osdsPerDevice: "4"  # 在单块盘上创建多个OSD以最大化利用SSD的性能，可以让OSD获得更多CPU资源进行并发读写，能提升IOPS且降低读写延迟（https://tracker.ceph.com/projects/ceph/wiki/Tuning_for_All_Flash_Deployments）
+              - name: "/dev/disk/by-id/nvme-INTEL_SSDPE2KX040T8_PHLJ8293003U4P0DGN"  # Intel P4510 4T U.2
+                config:
+                  deviceClass: "nvme"
+                  osdsPerDevice: "4"  # 在单块盘上创建多个OSD以最大化利用SSD的性能，可以让OSD获得更多CPU资源进行并发读写，能提升IOPS且降低读写延迟（https://tracker.ceph.com/projects/ceph/wiki/Tuning_for_All_Flash_Deployments）
       #        nodes:
       #          - name: "home-server-nut"
       #            devices:
