--- a/cluster/05_virtual-machine-base/kubevirt/kubevirt-operator-and-cr.yaml
+++ b/cluster/05_virtual-machine-base/kubevirt/kubevirt-operator-and-cr.yaml
@@ -6760,3 +6760,18 @@ spec:
             secretName: kubevirt-operator-certs
         - emptyDir: { }
           name: profile-data
+
+---
+apiVersion: kubevirt.io/v1
+kind: KubeVirt
+metadata:
+  name: kubevirt
+  namespace: kubevirt
+spec:
+  certificateRotateStrategy: { }
+  configuration:
+    developerConfiguration:
+      featureGates: [ ]
+  customizeComponents: { }
+  imagePullPolicy: IfNotPresent
+  workloadUpdateStrategy: { }
