重构虚拟机相关目录结构 调整系统盘镜像pvc的命名 优化windows虚拟机的配置，提升性能 增加windows11虚拟机

--- a/cluster/06_virtual-machine/vm-windows10/pvc.yaml
+++ b/cluster/06_virtual-machine/vm-windows10/pvc.yaml
@@ -9,4 +9,5 @@ spec:
   resources:
     requests:
       storage: 80Gi
-  storageClassName: local-path  # 使用底层存储指向了intel 900p裸盘的local-path-provisioner以最大化利用性能
+  storageClassName: ceph-block-application-performance
+  volumeMode: Block
