--- a/cluster/06_virtual-machine/vm-windows11/pvc.yaml
+++ b/cluster/06_virtual-machine/vm-windows11/pvc.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: iso-windows11-22621
+  name: vmdisk-windows11
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 6Gi
-  storageClassName: ceph-block-application
+      storage: 80Gi
+  storageClassName: ceph-block-application-performance
   volumeMode: Block
