调整flux配置，基础设施禁止自动清理

--- a/cluster/000-base/001-infrastructure.yaml
+++ b/cluster/000-base/001-infrastructure.yaml
@@ -9,7 +9,7 @@ spec:
   dependsOn:
     - name: 000-base
   path: ./cluster/001-infrastructure
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: flux-system
