--- a/cluster/000-base/kustomization.yaml
+++ b/cluster/000-base/kustomization.yaml
@@ -14,3 +14,4 @@ resources:
   - 011-management-tools-extra.yaml
   - 100-virtual-machine-base.yaml
   - 101-virtual-machine.yaml
+  - 201-programming.yaml
