--- a/cluster/000-base/kustomization.yaml
+++ b/cluster/000-base/kustomization.yaml
@@ -13,5 +13,6 @@ resources:
   - 010-management-tools.yaml
   - 011-management-tools-extra.yaml
   - 100-virtual-machine-base.yaml
-  - 101-virtual-machine.yaml
+  - 101-virtual-machine-base-extra.yaml
+  - 102-virtual-machine.yaml
   - 201-programming.yaml
