--- a/cluster/100-virtual-machine-base/kubevirt-cdi/kustomization.yaml
+++ b/cluster/100-virtual-machine-base/kubevirt-cdi/kustomization.yaml
@@ -2,7 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cdi-operator-and-cr.yaml
+  - cdi-operator.yaml
   - cdi-uploadproxy-loadbalancer.yaml
 #  - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.54.3/cdi-operator.yaml
-#  - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.54.3/cdi-cr.yaml
