--- a/cluster/100-virtual-machine-base/kubevirt/kustomization.yaml
+++ b/cluster/100-virtual-machine-base/kubevirt/kustomization.yaml
@@ -2,8 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kubevirt-operator-and-cr.yaml
+  - kubevirt-operator.yaml
 #  - https://github.com/kubevirt/kubevirt/releases/download/v0.59.0/kubevirt-operator.yaml
-#  - https://github.com/kubevirt/kubevirt/releases/download/v0.59.0/kubevirt-cr.yaml
-patchesStrategicMerge:
-  - override-kubevirt-config.yaml
