--- a/cluster/101-virtual-machine-base-extra/kustomization.yaml
+++ b/cluster/101-virtual-machine-base-extra/kustomization.yaml
@@ -2,5 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - isos
-  - vm-windows10
+  - kubevirt
+  - kubevirt-cdi
