--- a/cluster/100-virtual-machine-base/kubevirt/kubevirt-operator.yaml
+++ b/cluster/100-virtual-machine-base/kubevirt/kubevirt-operator.yaml
@@ -98,6 +98,16 @@ spec:
                 configuration:
                   description: holds kubevirt configurations. same as the virt-configMap
                   properties:
+                    additionalGuestMemoryOverheadRatio:
+                      description: AdditionalGuestMemoryOverheadRatio can be used to
+                        increase the virtualization infrastructure overhead. This is
+                        useful, since the calculation of this overhead is not accurate
+                        and cannot be entirely known in advance. The ratio that is being
+                        set determines by which factor to increase the overhead calculated
+                        by Kubevirt. A higher ratio means that the VMs would be less
+                        compromised by node pressures, but would mean that fewer VMs
+                        could be scheduled to a node. If not set, the default is 1.
+                      type: string
                     apiConfiguration:
                       description: ReloadableComponentConfiguration holds all generic
                         k8s configuration options which can be reloaded by components
@@ -536,6 +546,55 @@ spec:
                         version:
                           type: string
                       type: object
+                    supportContainerResources:
+                      description: SupportContainerResources specifies the resource
+                        requirements for various types of supporting containers such
+                        as container disks/virtiofs/sidecars and hotplug attachment
+                        pods. If omitted a sensible default will be supplied.
+                      items:
+                        description: SupportContainerResources are used to specify the
+                          cpu/memory request and limits for the containers that support
+                          various features of Virtual Machines. These containers are
+                          usually idle and don't require a lot of memory or cpu.
+                        properties:
+                          resources:
+                            description: ResourceRequirements describes the compute
+                              resource requirements.
+                            properties:
+                              limits:
+                                additionalProperties:
+                                  anyOf:
+                                    - type: integer
+                                    - type: string
+                                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                  x-kubernetes-int-or-string: true
+                                description: 'Limits describes the maximum amount of
+                                compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
+                                type: object
+                              requests:
+                                additionalProperties:
+                                  anyOf:
+                                    - type: integer
+                                    - type: string
+                                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                  x-kubernetes-int-or-string: true
+                                description: 'Requests describes the minimum amount
+                                of compute resources required. If Requests is omitted
+                                for a container, it defaults to Limits if that is
+                                explicitly specified, otherwise to an implementation-defined
+                                value. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
+                                type: object
+                            type: object
+                          type:
+                            type: string
+                        required:
+                          - resources
+                          - type
+                        type: object
+                      type: array
+                      x-kubernetes-list-map-keys:
+                        - type
+                      x-kubernetes-list-type: map
                     supportedGuestAgentVersions:
                       description: deprecated
                       items:
@@ -565,6 +624,11 @@ spec:
                       type: object
                     virtualMachineInstancesPerNode:
                       type: integer
+                    vmStateStorageClass:
+                      description: VMStateStorageClass is the name of the storage class
+                        to use for the PVCs created to preserve VM state, like TPM.
+                        The storage class must support RWX in filesystem mode.
+                      type: string
                     webhookConfiguration:
                       description: ReloadableComponentConfiguration holds all generic
                         k8s configuration options which can be reloaded by components
@@ -2850,6 +2914,16 @@ spec:
                 configuration:
                   description: holds kubevirt configurations. same as the virt-configMap
                   properties:
+                    additionalGuestMemoryOverheadRatio:
+                      description: AdditionalGuestMemoryOverheadRatio can be used to
+                        increase the virtualization infrastructure overhead. This is
+                        useful, since the calculation of this overhead is not accurate
+                        and cannot be entirely known in advance. The ratio that is being
+                        set determines by which factor to increase the overhead calculated
+                        by Kubevirt. A higher ratio means that the VMs would be less
+                        compromised by node pressures, but would mean that fewer VMs
+                        could be scheduled to a node. If not set, the default is 1.
+                      type: string
                     apiConfiguration:
                       description: ReloadableComponentConfiguration holds all generic
                         k8s configuration options which can be reloaded by components
@@ -3288,6 +3362,55 @@ spec:
                         version:
                           type: string
                       type: object
+                    supportContainerResources:
+                      description: SupportContainerResources specifies the resource
+                        requirements for various types of supporting containers such
+                        as container disks/virtiofs/sidecars and hotplug attachment
+                        pods. If omitted a sensible default will be supplied.
+                      items:
+                        description: SupportContainerResources are used to specify the
+                          cpu/memory request and limits for the containers that support
+                          various features of Virtual Machines. These containers are
+                          usually idle and don't require a lot of memory or cpu.
+                        properties:
+                          resources:
+                            description: ResourceRequirements describes the compute
+                              resource requirements.
+                            properties:
+                              limits:
+                                additionalProperties:
+                                  anyOf:
+                                    - type: integer
+                                    - type: string
+                                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                  x-kubernetes-int-or-string: true
+                                description: 'Limits describes the maximum amount of
+                                compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
+                                type: object
+                              requests:
+                                additionalProperties:
+                                  anyOf:
+                                    - type: integer
+                                    - type: string
+                                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                  x-kubernetes-int-or-string: true
+                                description: 'Requests describes the minimum amount
+                                of compute resources required. If Requests is omitted
+                                for a container, it defaults to Limits if that is
+                                explicitly specified, otherwise to an implementation-defined
+                                value. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
+                                type: object
+                            type: object
+                          type:
+                            type: string
+                        required:
+                          - resources
+                          - type
+                        type: object
+                      type: array
+                      x-kubernetes-list-map-keys:
+                        - type
+                      x-kubernetes-list-type: map
                     supportedGuestAgentVersions:
                       description: deprecated
                       items:
@@ -3317,6 +3440,11 @@ spec:
                       type: object
                     virtualMachineInstancesPerNode:
                       type: integer
+                    vmStateStorageClass:
+                      description: VMStateStorageClass is the name of the storage class
+                        to use for the PVCs created to preserve VM state, like TPM.
+                        The storage class must support RWX in filesystem mode.
+                      type: string
                     webhookConfiguration:
                       description: ReloadableComponentConfiguration holds all generic
                         k8s configuration options which can be reloaded by components
@@ -5580,6 +5708,15 @@ metadata:
 rules:
   - apiGroups:
       - ""
+    resourceNames:
+      - kubevirt-ca
+      - kubevirt-export-ca
+      - kubevirt-virt-handler-certs
+      - kubevirt-virt-handler-server-certs
+      - kubevirt-operator-certs
+      - kubevirt-virt-api-certs
+      - kubevirt-controller-certs
+      - kubevirt-exportproxy-certs
     resources:
       - secrets
     verbs:
@@ -6109,6 +6246,7 @@ rules:
       - virtualmachineinstances/freeze
       - virtualmachineinstances/unfreeze
       - virtualmachineinstances/softreboot
+      - virtualmachineinstances/addinterface
     verbs:
       - update
   - apiGroups:
@@ -6347,6 +6485,7 @@ rules:
       - virtualmachineinstances/freeze
       - virtualmachineinstances/unfreeze
       - virtualmachineinstances/softreboot
+      - virtualmachineinstances/addinterface
     verbs:
       - update
   - apiGroups:
@@ -6366,6 +6505,7 @@ rules:
       - virtualmachines/removevolume
       - virtualmachines/migrate
       - virtualmachines/memorydump
+      - virtualmachines/addinterface
     verbs:
       - update
   - apiGroups:
@@ -6397,6 +6537,32 @@ rules:
       - virtualmachinesnapshots
       - virtualmachinesnapshotcontents
       - virtualmachinerestores
+    verbs:
+      - get
+      - delete
+      - create
+      - update
+      - patch
+      - list
+      - watch
+      - deletecollection
+  - apiGroups:
+      - export.kubevirt.io
+    resources:
+      - virtualmachineexports
+    verbs:
+      - get
+      - delete
+      - create
+      - update
+      - patch
+      - list
+      - watch
+      - deletecollection
+  - apiGroups:
+      - clone.kubevirt.io
+    resources:
+      - virtualmachineclones
     verbs:
       - get
       - delete
@@ -6465,6 +6631,7 @@ rules:
       - virtualmachineinstances/freeze
       - virtualmachineinstances/unfreeze
       - virtualmachineinstances/softreboot
+      - virtualmachineinstances/addinterface
     verbs:
       - update
   - apiGroups:
@@ -6484,6 +6651,7 @@ rules:
       - virtualmachines/removevolume
       - virtualmachines/migrate
       - virtualmachines/memorydump
+      - virtualmachines/addinterface
     verbs:
       - update
   - apiGroups:
@@ -6514,6 +6682,30 @@ rules:
       - virtualmachinesnapshots
       - virtualmachinesnapshotcontents
       - virtualmachinerestores
+    verbs:
+      - get
+      - delete
+      - create
+      - update
+      - patch
+      - list
+      - watch
+  - apiGroups:
+      - export.kubevirt.io
+    resources:
+      - virtualmachineexports
+    verbs:
+      - get
+      - delete
+      - create
+      - update
+      - patch
+      - list
+      - watch
+  - apiGroups:
+      - clone.kubevirt.io
+    resources:
+      - virtualmachineclones
     verbs:
       - get
       - delete
@@ -6597,6 +6789,22 @@ rules:
       - virtualmachinesnapshots
       - virtualmachinesnapshotcontents
       - virtualmachinerestores
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - export.kubevirt.io
+    resources:
+      - virtualmachineexports
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - clone.kubevirt.io
+    resources:
+      - virtualmachineclones
     verbs:
       - get
       - list
@@ -6701,14 +6909,14 @@ spec:
             - virt-operator
           env:
             - name: VIRT_OPERATOR_IMAGE
-              value: quay.io/kubevirt/virt-operator:v0.59.0
+              value: quay.io/kubevirt/virt-operator:v1.0.0-alpha.0
             - name: WATCH_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.annotations['olm.targetNamespaces']
             - name: KUBEVIRT_VERSION
-              value: v0.59.0
-          image: quay.io/kubevirt/virt-operator:v0.59.0
+              value: v1.0.0-alpha.0
+          image: quay.io/kubevirt/virt-operator:v1.0.0-alpha.0
           imagePullPolicy: IfNotPresent
           name: virt-operator
           ports:
@@ -6728,7 +6936,7 @@ spec:
           resources:
             requests:
               cpu: 10m
-              memory: 400Mi
+              memory: 450Mi
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
