--- a/cluster/000-base/220-software-development.yaml
+++ b/cluster/000-base/220-software-development.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: 201-programming
+  name: 220-software-development
   namespace: flux-system
 spec:
   interval: 10m0s
   dependsOn:
     - name: 011-management-tools-extra
-  path: ./cluster/201-software-development
+  path: ./cluster/220-software-development
   prune: true
   sourceRef:
     kind: GitRepository
