--- a/cluster/000-base/kustomization.yaml
+++ b/cluster/000-base/kustomization.yaml
@@ -16,4 +16,5 @@ resources:
   - 100-virtual-machine-base.yaml
   - 101-virtual-machine-base-extra.yaml
   - 102-virtual-machine.yaml
+  - 200-storage-service.yaml
   - 220-software-development.yaml
