添加重构的日常生活服务

--- a/cluster/000-base/kustomization.yaml
+++ b/cluster/000-base/kustomization.yaml
@@ -17,4 +17,5 @@ resources:
   - 101-virtual-machine-base-extra.yaml
   - 102-virtual-machine.yaml
   - 200-storage-service.yaml
+  - 210-life-service.yaml
   - 220-software-development.yaml
