--- a/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
@@ -244,168 +244,167 @@ spec:
             csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
             csi.storage.k8s.io/fstype: ext4  # 可以设置为xfs，但官方不推荐
 
-    cephFileSystems: [ ]
-    #    cephFileSystems:
-    #      - name: fs-application
-    #        spec:
-    #          metadataPool:
-    #            failureDomain: osd
-    #            replicated:
-    #              size: 3  # 副本数，多副本确保元数据可靠性
-    #              requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
-    #            deviceClass: ssd  # 设置后端osd类型，使用ssd加速metadata读写和响应速度
-    #          dataPools:
-    #            - failureDomain: osd
-    #              replicated:
-    #                size: 3  # 副本数
-    #                requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
-    #              deviceClass: ssd  # 设置后端osd类型
-    #          metadataServer:
-    #            # 默认设置不用动
-    #            activeCount: 1
-    #            activeStandby: true
-    #        storageClass:
-    #          enabled: true
-    #          name: ceph-fs-application  # 存储类名称
-    #          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
-    #          parameters:
-    #            # 默认设置不用动
-    #            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
-    #            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
-    #            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
-    #            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/fstype: ext4
-    #
-    #      - name: fs-media
-    #        spec:
-    #          metadataPool:
-    #            failureDomain: osd
-    #            replicated:
-    #              size: 3  # 副本数，多副本确保元数据可靠性
-    #              requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
-    #            deviceClass: ssd  # 设置后端osd类型，使用ssd加速metadata读写和响应速度
-    #          dataPools:
-    #            - failureDomain: osd
-    #              replicated:
-    #                size: 3  # 副本数
-    #                requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
-    #              deviceClass: hdd  # 设置后端osd类型
-    #          metadataServer:
-    #            # 默认设置不用动
-    #            activeCount: 1
-    #            activeStandby: true
-    #        storageClass:
-    #          enabled: true
-    #          name: ceph-fs-media  # 存储类名称
-    #          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
-    #          parameters:
-    #            # 默认设置不用动
-    #            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
-    #            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
-    #            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
-    #            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/fstype: ext4
-    #
-    #      - name: fs-media-unsafe
-    #        spec:
-    #          metadataPool:
-    #            failureDomain: osd
-    #            replicated:
-    #              size: 3  # 副本数，多副本确保元数据可靠性
-    #              requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
-    #            deviceClass: ssd  # 设置后端osd类型，使用ssd加速metadata读写和响应速度
-    #          dataPools:
-    #            - failureDomain: osd
-    #              replicated:
-    #                size: 1  # 副本数
-    #                requireSafeReplicaSize: false  # 安全选项，副本数为1时需要设为false，否则会无法创建
-    #              deviceClass: hdd  # 设置后端osd类型
-    #          metadataServer:
-    #            # 默认设置不用动
-    #            activeCount: 1
-    #            activeStandby: true
-    #        storageClass:
-    #          enabled: true
-    #          name: ceph-fs-media-unsafe  # 存储类名称
-    #          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
-    #          parameters:
-    #            # 默认设置不用动
-    #            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
-    #            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
-    #            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
-    #            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/fstype: ext4
-    #
-    #      - name: fs-temp
-    #        spec:
-    #          metadataPool:
-    #            failureDomain: osd
-    #            replicated:
-    #              size: 1  # 副本数，多副本确保元数据可靠性
-    #              requireSafeReplicaSize: false  # 安全选项，副本数为1时需要设为false，否则会无法创建
-    #            deviceClass: ssd  # 设置后端osd类型，使用ssd加速metadata读写和响应速度
-    #          dataPools:
-    #            - failureDomain: osd
-    #              replicated:
-    #                size: 1  # 副本数
-    #                requireSafeReplicaSize: false  # 安全选项，副本数为1时需要设为false，否则会无法创建
-    #              deviceClass: hdd  # 设置后端osd类型
-    #          metadataServer:
-    #            # 默认设置不用动
-    #            activeCount: 1
-    #            activeStandby: true
-    #        storageClass:
-    #          enabled: true
-    #          name: ceph-fs-temp  # 存储类名称
-    #          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
-    #          parameters:
-    #            # 默认设置不用动
-    #            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
-    #            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
-    #            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
-    #            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/fstype: ext4
-    #
-    #      - name: fs-compressed-files
-    #        spec:
-    #          metadataPool:
-    #            failureDomain: osd
-    #            replicated:
-    #              size: 3  # 副本数，多副本确保元数据可靠性
-    #              requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
-    #            deviceClass: ssd  # 设置后端osd类型，使用ssd加速metadata读写和响应速度
-    #          dataPools:
-    #            - failureDomain: osd
-    #              replicated:
-    #                size: 3  # 副本数
-    #                requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
-    #              deviceClass: hdd  # 设置后端osd类型
-    #              parameters:
-    #                compression_mode: aggressive # 设置除了指定不可压缩的数据以外都进行压缩
-    #          metadataServer:
-    #            # 默认设置不用动
-    #            activeCount: 1
-    #            activeStandby: true
-    #        storageClass:
-    #          enabled: true
-    #          name: ceph-fs-compressed-files  # 存储类名称
-    #          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
-    #          parameters:
-    #            # 默认设置不用动
-    #            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
-    #            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
-    #            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
-    #            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
-    #            csi.storage.k8s.io/fstype: ext4
+    cephFileSystems:
+      #      - name: fs-application
+      #        spec:
+      #          metadataPool:
+      #            failureDomain: osd
+      #            replicated:
+      #              size: 3  # 副本数，多副本确保元数据可靠性
+      #              requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
+      #            deviceClass: ssd  # 设置后端osd类型，使用ssd加速metadata读写和响应速度
+      #          dataPools:
+      #            - failureDomain: osd
+      #              replicated:
+      #                size: 3  # 副本数
+      #                requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
+      #              deviceClass: ssd  # 设置后端osd类型
+      #          metadataServer:
+      #            # 默认设置不用动
+      #            activeCount: 1
+      #            activeStandby: true
+      #        storageClass:
+      #          enabled: true
+      #          name: ceph-fs-application  # 存储类名称
+      #          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
+      #          parameters:
+      #            # 默认设置不用动
+      #            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
+      #            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
+      #            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
+      #            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
+      #            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
+      #            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
+      #            csi.storage.k8s.io/fstype: ext4
+
+      - name: fs-media
+        spec:
+          metadataPool:
+            failureDomain: osd
+            replicated:
+              size: 3  # 副本数，多副本确保元数据可靠性
+              requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
+            deviceClass: nvme  # 设置后端osd类型，使用nvme ssd加速metadata读写和响应速度
+          dataPools:
+            - failureDomain: osd
+              replicated:
+                size: 3  # 副本数
+                requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
+              deviceClass: hdd  # 设置后端osd类型
+          metadataServer:
+            # 默认设置不用动
+            activeCount: 1
+            activeStandby: true
+        storageClass:
+          enabled: true
+          name: ceph-fs-media  # 存储类名称
+          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
+          parameters:
+            # 默认设置不用动
+            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
+            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
+            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
+            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
+            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
+            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
+            csi.storage.k8s.io/fstype: ext4
+
+      - name: fs-media-unsafe
+        spec:
+          metadataPool:
+            failureDomain: osd
+            replicated:
+              size: 3  # 副本数，多副本确保元数据可靠性
+              requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
+            deviceClass: nvme  # 设置后端osd类型，使用nvme ssd加速metadata读写和响应速度
+          dataPools:
+            - failureDomain: osd
+              replicated:
+                size: 1  # 副本数
+                requireSafeReplicaSize: false  # 安全选项，副本数为1时需要设为false，否则会无法创建
+              deviceClass: hdd  # 设置后端osd类型
+          metadataServer:
+            # 默认设置不用动
+            activeCount: 1
+            activeStandby: true
+        storageClass:
+          enabled: true
+          name: ceph-fs-media-unsafe  # 存储类名称
+          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
+          parameters:
+            # 默认设置不用动
+            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
+            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
+            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
+            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
+            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
+            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
+            csi.storage.k8s.io/fstype: ext4
+
+      - name: fs-temp
+        spec:
+          metadataPool:
+            failureDomain: osd
+            replicated:
+              size: 1  # 副本数，多副本确保元数据可靠性
+              requireSafeReplicaSize: false  # 安全选项，副本数为1时需要设为false，否则会无法创建
+            deviceClass: nvme  # 设置后端osd类型，使用nvme ssd加速metadata读写和响应速度
+          dataPools:
+            - failureDomain: osd
+              replicated:
+                size: 1  # 副本数
+                requireSafeReplicaSize: false  # 安全选项，副本数为1时需要设为false，否则会无法创建
+              deviceClass: hdd  # 设置后端osd类型
+          metadataServer:
+            # 默认设置不用动
+            activeCount: 1
+            activeStandby: true
+        storageClass:
+          enabled: true
+          name: ceph-fs-temp  # 存储类名称
+          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
+          parameters:
+            # 默认设置不用动
+            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
+            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
+            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
+            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
+            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
+            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
+            csi.storage.k8s.io/fstype: ext4
+
+      - name: fs-compressed-files
+        spec:
+          metadataPool:
+            failureDomain: osd
+            replicated:
+              size: 3  # 副本数，多副本确保元数据可靠性
+              requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
+            deviceClass: nvme  # 设置后端osd类型，使用nvme ssd加速metadata读写和响应速度
+          dataPools:
+            - failureDomain: osd
+              replicated:
+                size: 3  # 副本数
+                requireSafeReplicaSize: true  # 安全选项，副本数为1时需要设为false，否则会无法创建
+              deviceClass: hdd  # 设置后端osd类型
+              parameters:
+                compression_mode: aggressive # 设置除了指定不可压缩的数据以外都进行压缩
+          metadataServer:
+            # 默认设置不用动
+            activeCount: 1
+            activeStandby: true
+        storageClass:
+          enabled: true
+          name: ceph-fs-compressed-files  # 存储类名称
+          reclaimPolicy: Delete  # PVC被删除后自动删除池中的内容
+          parameters:
+            # 默认设置不用动
+            csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
+            csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
+            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-cephfs-provisioner
+            csi.storage.k8s.io/controller-expand-secret-namespace: rook-ceph
+            csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
+            csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
+            csi.storage.k8s.io/fstype: ext4
 
     cephObjectStores: [ ]
