--- a/cluster/200-storage-service/pvcs/kustomization.yaml
+++ b/cluster/200-storage-service/pvcs/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - camera-files.yaml
+  - dump-files.yaml
   - music-files.yaml
   - other-files.yaml
   - other-media-files.yaml
