关闭flux对管理工具类的自动清理

--- a/cluster/000-base/010-management-tools.yaml
+++ b/cluster/000-base/010-management-tools.yaml
@@ -9,7 +9,7 @@ spec:
   dependsOn:
     - name: 002-infrastructure-extra
   path: ./cluster/010-management-tools
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: flux-system
