暂时移除管理工具类服务

--- a/cluster/000-base/kustomization.yaml
+++ b/cluster/000-base/kustomization.yaml
@@ -11,8 +11,8 @@ resources:
   - namespaces_other
   - 001-infrastructure.yaml
   - 002-infrastructure-extra.yaml
-  - 010-management-tools.yaml
-  - 011-management-tools-extra.yaml
+  #  - 010-management-tools.yaml
+  #  - 011-management-tools-extra.yaml
   - 100-virtual-machine-base.yaml
   - 101-virtual-machine-base-extra.yaml
   - 102-virtual-machine.yaml
