恢复三个工具类服务的部署

--- a/cluster/000-base/kustomization.yaml
+++ b/cluster/000-base/kustomization.yaml
@@ -16,6 +16,6 @@ resources:
   - 100-virtual-machine-base.yaml
   - 101-virtual-machine-base-extra.yaml
   - 102-virtual-machine.yaml
-#  - 200-storage-service.yaml
-#  - 210-life-service.yaml
-#  - 220-software-development.yaml
+  - 200-storage-service.yaml
+  - 210-life-service.yaml
+  - 220-software-development.yaml
