--- a/cluster/000-base/namespaces_other/kustomization.yaml
+++ b/cluster/000-base/namespaces_other/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - bitwarden.yaml
   - entertainment.yaml
   - file-service.yaml
-  - home-automation.yaml
+  - smart-home.yaml
   - kasten-io.yaml
   - nexus.yaml
