--- a/cluster/000-base/namespaces_other/smart-home.yaml
+++ b/cluster/000-base/namespaces_other/smart-home.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: home-automation
+  name: smart-home
   labels:
     sync-https-wildcard-certificate: "true"
