--- a/cluster/240-smart-home/home-assistant/influxdb/data-pvc.yaml
+++ b/cluster/240-smart-home/home-assistant/influxdb/data-pvc.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: home-assistant-config
-  namespace: home-automation
+  name: home-assistant-influxdb-data
+  namespace: smart-home
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: 50Gi
   storageClassName: ceph-block-application
