暂时移除octoprint的部署节点限制

--- a/cluster/250-3d-print/octoprint/helm-release.yaml
+++ b/cluster/250-3d-print/octoprint/helm-release.yaml
@@ -81,8 +81,8 @@ spec:
         type: hostPath
         hostPath: /dev/vchiq
 
-    nodeSelector:
-      kubernetes.io/hostname: "home-server-nut"
+    #    nodeSelector:
+    #      kubernetes.io/hostname: "home-server-nut"
     #      kubernetes.io/hostname: "raspberry-pi4b"
 
     tolerations:
