暂时移除媒体服务中emby对gpu的需求

--- a/cluster/230-media-service/emby/helm-release.yaml
+++ b/cluster/230-media-service/emby/helm-release.yaml
@@ -88,6 +88,6 @@ spec:
           - secretName: "${SECRET_DOMAIN/./-}-tls"
           - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
 
-    resources:
-      limits:
-        nvidia.com/gpu: 1
+#    resources:
+#      limits:
+#        nvidia.com/gpu: 1
