--- a/cluster/230-media-service/flaresolverr/helm-release.yaml
+++ b/cluster/230-media-service/flaresolverr/helm-release.yaml
@@ -30,6 +30,9 @@ spec:
 
     env:
       TZ: "Asia/Shanghai"
-      UID: "1000"
-      GID: "1000"
-      UMASK: 002
+
+    securityContext:
+      runAsUser: 1000
+      runAsGroup: 1000
+      fsGroup: 1000
+      fsGroupChangePolicy: "OnRootMismatch"
