--- a/cluster/230-media-service/overseerr/helm-release.yaml
+++ b/cluster/230-media-service/overseerr/helm-release.yaml
@@ -30,9 +30,12 @@ spec:
 
     env:
       TZ: "Asia/Shanghai"
-      UID: "1000"
-      GID: "1000"
-      UMASK: 002
+
+    securityContext:
+      runAsUser: 1000
+      runAsGroup: 1000
+      fsGroup: 1000
+      fsGroupChangePolicy: "OnRootMismatch"
 
     persistence:
       config:
