开启rook-ceph的nfs功能

--- a/cluster/001-infrastructure/rook-ceph/helm-ceph-operator.yaml
+++ b/cluster/001-infrastructure/rook-ceph/helm-ceph-operator.yaml
@@ -42,3 +42,5 @@ spec:
         - key: node-role.kubernetes.io/edge
           operator: Exists
           effect: NoSchedule
+    nfs:
+      enabled: true
