--- a/cluster/000-base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/000-base/flux-system/charts/helm/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - appscode-charts.yaml
   - bitnami-charts.yaml
+  - bjw-s-charts.yaml
   - cilium-charts.yaml
   - elastic-charts.yaml
   - gitlab-charts.yaml
