--- a/cluster/220-software-development/gitlab/helm-release.yaml
+++ b/cluster/220-software-development/gitlab/helm-release.yaml
@@ -20,7 +20,13 @@ spec:
         name: gitlab-charts
         namespace: flux-system
   values:
+    postgresql:
+      install: true
+      image:
+        tag: 14.8.0
     gitlab:
+      migrations:
+        enabled: false
       webservice:
         ingress:
           tls:
